Fix display of formatDuration with rounding.

Summary:
When showing the time (1 hour 59.5 minutes) with seconds hidden we
want to show "2 hours 0 minutes" not "1 hour 60 minutes".

This is fixed by performing the rounding before we split the number of
miliseconds into component parts, rather than splitting and then
rounding.

BUG: 360681
BUG: 382069

Test Plan: Updated unit test

Subscribers: #frameworks

Tags: #frameworks

Differential Revision: https://phabricator.kde.org/D6537